data/all_generated_tests/raw_wast_tests/nop_IncorrectConditionEvaluation_408.wast
;; 9. Position multiple `nop` instructions interspersed within and around a complex conditional chain involving several `br_if` calls. Ensure the overall conditional logic flow remains correct and consistent with the intended control flow paths.

(assert_invalid
  (module
    (func $complex-nop-control (result i32)
      (block $outer
        (br_if $outer (i32.const 1) (nop))
        (nop)
        (block $inner
          (nop)
          (br_if $inner (i32.const 0))
          (nop)
        )
        (return (i32.const 42))
      )
    )
  )
  "type mismatch"
)